--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,9 @@
  @import url("https://fonts.googleapis.com/css2?family=AR+One+Sans:wght@400..700&family=Baloo+2:wght@400..800&display=swap");
 *{
   font-family: "AR One Sans", sans-serif;
+  box-sizing: border-box;
+}
+body{
+  overflow-x: hidden;
 }
 
